--- a/README
+++ b/README
@@ -1,1 +1,6 @@
+# ngTagsInput - bower edition
+
+This is fork of ngTagsInput directive for AngularJS. Check out the [ngTagsInput](https://github.com/mbenford/ngTagsInput/) with some improvements due to this [issue](https://github.com/mbenford/ngTagsInput/issues/100).
+
+
 Bower repository for ngTagsInput
